style.css
/* ... */
.group2 {
	background-color: #c8cf2c;
	column-count: 3;
-moz-column-count: 3;
}



/******** FLEX SLIDE BEGIN *********/



.test {
	/*align-items: center;
    justify-content: center;
	vertical-align: middle;
	
	text-align: center;*/
	
}

.group {

	background-color: #e7e290;
	width: 100%;
	border: 7px solid white;
	padding: 20px 0px 20px 0px;

}


.aligngroup {
		column-count: 2;
		-moz-column-count:2;
		margin: 0 0 0 30px;


}


.hcol-a {
	text-align: left;
	margin: 0px 15px 20px 15px;
	font-family: 'Dosis', sans-serif;
	font-weight: 400;
	letter-spacing: .5px;

	
	line-height: 1.5em;
	color: #732779;
	max-width: 250px;
	
display: inline-block;
	position: relative;
	float: left;

}



.hflexcontainer {
	
	max-width: 619px;
	height: auto;
	margin: 0px 15px 0px 15px;

}

.vflexcontainer {
	max-width: 465px;
  height: auto;  
  margin: 0px 15px 0px 15px;
	
}

.bigcontainer {
}


.flex-control-nav flex-control-paging li {

}


/******* FLEX SLIDE END **********/




/**** ABOUT ****/

.bio {
	color: #732779;
	font-family: 'Dosis', sans-serif;
}


.bioblock {
	
	font-size: 1em;
	max-width: 545px;
	line-height: 2em;
	text-align: justify;
	min-width: 545px;
	padding: 30px;
	justify-content: center;
	padding-top: 150px;
}

.biogroup {
    background-color: rgba(200, 207, 44, 0.75);
	text-align: center;
	height: 595px;
	
}

.biogroup li {
	
	display: inline-block;
}



/**** RESUME ****/



/**** CONTACT ****/






.contact1 {
	color: #732779;
	padding-top: 144px;
	padding-left: 98px;
	font-size: 1em;
	line-height: 1.5em;
	min-width: 310px;
	height: 650px;
}

.contact2 {
	color: #732779;
	padding-top: 172px;
	padding-left: 98px;
	font-size: 1em;
	line-height: 1.5em;
	min-width: 310px;
	height: 650px;
}



.contacticons ul {
	display: block;
	text-decoration: none;
}



li .email,
.linkedin,
.twitter,
.tumblr {
 vertical-align: middle;
 
}

.iconimg {
  vertical-align: middle;
}


.contactgroup {
    background-color: rgba(200, 207, 44, 0.75);

	font-family: 'Dosis', sans-serif;
	
	-webkit-display: flex;
	-moz-display: flex;
	-ms-display: flex;
	-o-display: flex;
	display: flex;
	-webkit-flex-direction: row;
	-moz-flex-direction: row;
	-ms-flex-direction: row;
	-o-flex-direction: row;
	flex-direction: row;
	
		align-items: center;
    justify-content: center;
	
	height: 595px;
}





/**** FOOTER ****/

.footerbuffer {
	padding-bottom: 30px;
}


.footer {
	background: #732779;
	text-align: center;
	padding: 20px;
	color: #ffffff;
	margin-top: 15px;
	font-family: 'Dosis', sans-serif;
	letter-spacing: .5px;
	font-weight: 400;

	clear: both;
}




/*Media Queries*/

@media screen and (min-width:1920px) {
	
	.background {
		height: 800px;
	}


	.bottomteeth {
	top: 785px;
	}
	
.logo_large {
	width: 17.4%;
	height: auto;
}


	.biogroup,
	.contactgroup {
		height: 800px;
	}


}



@media screen and (max-width:1266px) {
	
	
	.hcol-a {
	text-align: left;
	margin: 0px 15px 0px 15px;
	font-family: 'Dosis', sans-serif;
	font-weight: 400;
	letter-spacing: .5px;
	line-height: 1.5em;
	color: #732779;
	max-width: 250px;

	font-size: .9em;

}

.aligngroup {
	width: 100%;
}
	
	
}



@media screen and (max-width:782px) {
	.category {
		display: none;
	}
	
	.divider {
		display: none;
	}
	
	.buttonwidth {
		width: 70%;
		height: auto;
		display: inline;
	}
	
	.meganimg {
		display: none;
	}
	
}

@media screen and (max-width:563px) {
	
	
	
	.navstyle {
	width: 60px;
	height: 37px;
	background-color: #732779;
	color: white;

	z-index: 90;
    border-radius: 7px;
	font-family: 'Dosis', sans-serif;
	font-size: .8em;
	font-weight: 500;
	display: inline-block;

	margin: 8px 0px 0px 5px;
	
	align-items: center;
    justify-content: center;
	
	text-align: center;
	vertical-align: middle;
	padding: 10px;

	}
	
	.bioblock {
	font-size: .9em;
	max-width: 320px;
	line-height: 1.7em;
	text-align: justify;
	min-width: 320px;
	padding: 30px;
	justify-content: center;
	padding-top: 150px;
	}
	
	
	.contact2 {
		display: none;
	}

	
	.background {
		background: none;
	}
	
	.flex-direction-nav a:before{
		opacity: 0.4;

	}
}

@media screen and (max-width:963px) {
	.aligngroup {
		column-count: 1;
		-moz-column-count: 1;
	}
	
	.hcol-a {
		display: block;
	}
	
	
}

